# LongDeepSleep

./: CloneDeepSleepWorkaround_8cpp.html  CloneDeepSleepWorkaround_8cpp.js  CloneDeepSleepWorkaround_8h.html  CloneDeepSleepWorkaround_8h.js  CloneDeepSleepWorkaround_8h_source.html  Doxyfile  LongDeepSleep_8cpp.html  LongDeepSleep_8cpp.js  LongDeepSleep_8h.html  LongDeepSleep_8h.js  LongDeepSleep_8h_source.html  Readme.md  SwitchableSerial_8h.html  SwitchableSerial_8h.js  SwitchableSerial_8h_source.html  annotated.html  annotated_dup.js  classLongDeepSleep-members.html  classLongDeepSleep.html  classLongDeepSleep.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  library.properties  navtreedata.js  navtreeindex0.js
.github/workflows/: doxygen.yml  run-tests.yml
search/: all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  (+1 more)
src/: CloneDeepSleepWorkaround.cpp  CloneDeepSleepWorkaround.h  LongDeepSleep.cpp  LongDeepSleep.h  SwitchableSerial.h
test/: CMakeLists.txt  ESPMock.h  MockCloneDeepSleepWorkaround.cpp  MockGlobalInstances.h  MockTestSetup.h  NTPClientMock.h  SerialMock.h  WifiMock.h  main.cpp
(+1 files in other folders)
